--- a/Infinite War/Resource.resx
+++ b/Infinite War/Resource.resx
@@ -124,6 +124,9 @@
   <data name="bullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\bullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dagger" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\dagger.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="enemy_gun" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\enemy_gun.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
