--- a/Infinite War/Resource.resx
+++ b/Infinite War/Resource.resx
@@ -127,6 +127,9 @@
   <data name="dagger" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\dagger.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="enemy_bullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\enemy_bullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="enemy_gun" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\enemy_gun.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -165,5 +168,38 @@
   </data>
   <data name="sword_range" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\sword_range.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="s_dagger" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\dagger.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_dagger_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\dagger_hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_gun" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\gun.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_gun_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\gun_hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_player_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\s_player_hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_rpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\rpg.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_rpg_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\rpg_hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_select" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\s_select.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_switch_weapon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\s_switch_weapon.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_sword" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\sword.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="s_sword_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\sword_hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
